--- a/app/apps/authorisatie/templates/auth/group_form.html
+++ b/app/apps/authorisatie/templates/auth/group_form.html
@@ -13,46 +13,68 @@
             </a>
         </div>
 
-        <h1>Rechtengroep: {{object.name}}</h1>
 
-        {% if object.user_set.all %}
-        <h2>Gebruikers die gebruikmaken van deze rechtengroep</h2>
-        <ul>
-            {% for gebruiker in object.user_set.all %}
-            <li>
-                <strong>{{gebruiker.email}}</strong>
-                {% if gebruiker.first_name or profiel.gebruiker.last_name %}
-                ({{gebruiker.first_name}}
-                {% if gebruiker.last_name %} {{gebruiker.last_name}}{% endif %})
-                {% endif %}
-                <a href="{% url 'gebruiker_aanpassen' gebruiker.id %}">Aanpassen</a>
-            </li>
-            {% endfor%}
-        </ul>
-        <p>
-            Let op: De rechtengroep kan niet worden verwijderd. Als de bovenstaande gebruikers in een andere rechtengroep worden gezet, kan deze rechtengroep wel verwijderd worden
-        </p>
+        {% if object %}
+        <h1>Rechtengroep '{{object.name}}' aanpassen</h1>
+        {% else %}
+        <h1>Rechtengroep aanmaken</h1>
         {% endif %}
+        <div class="grid-container">
+            <div class="grid-item">
+                {% if object.user_set.all %}
+                <div class="alert alert--warning">
+                    <span>
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600"/>
+                        </svg>
+                    </span>
+                    <div>
+                        Let op: het wijzigen van deze rechtengroep heeft gevolgen voor alle gebruikers die gebruik maken van deze rechtengroep.
+                        <p>
+                            De rechtengroep kan niet worden verwijderd. Als de bovenstaande gebruikers in een andere rechtengroep worden gezet, kan deze rechtengroep wel verwijderd worden
+                        </p>
+                    </div>
+                </div>
+                {% endif %}
+                <form action="." method="post">
+                    {% csrf_token %}
+                    <fieldset>
+                    {{ form.name|render_rotterdam_formulier }}
+                    {{ form.permissions|render_rotterdam_formulier }}
+                    </fieldset>
 
-
-        <form action="." method="post">
-            {% csrf_token %}
-            <fieldset>
-            {{ form.name|render_rotterdam_formulier }}
-            {{ form.permissions|render_rotterdam_formulier }}
-            </fieldset>
-
-            <div class="form-row container__button">
-                <div class="form-row btn-row">
-                <button type="reset" class="btn btn-tertiary">
-                    <span>Annuleren</span>
-                </button>
-                <button type="submit" class="btn btn-action">
-                    <span>Aanpassen</span>
-                </button>
+                    <div class="form-row container__button">
+                        <div class="form-row btn-row">
+                            <button type="reset" class="btn btn-tertiary">
+                                <span>Annuleren</span>
+                            </button>
+                            <button type="submit" class="btn btn-action">
+                                <span>Aanpassen</span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
+            <div>
+                {% if object.user_set.all %}
+                <div class="container__userlist">
+                    <h2 class="h3">Gebruikers die gebruikmaken van deze rechtengroep</h2>
+                    <ul class="list-clean">
+                        {% for gebruiker in object.user_set.all %}
+                        <li>
+                            <a href="{% url 'gebruiker_aanpassen' gebruiker.id %}">{{gebruiker.email}}</a>
+                            {% comment %} {% if gebruiker.first_name or profiel.gebruiker.last_name %}
+                            ({{gebruiker.first_name}}
+                            {% if gebruiker.last_name %} {{gebruiker.last_name}}{% endif %})
+                            {% endif %} {% endcomment %}
+
+                        </li>
+                        {% endfor%}
+                    </ul>
+                    {% endif %}
+                </div>
             </div>
-        </form>
+        </div>
     </div>
 </turbo-frame>
 {% endblock %}
