--- a/app/apps/context/templates/context/context_list.html
+++ b/app/apps/context/templates/context/context_list.html
@@ -12,7 +12,12 @@
     </div>
     <div class="container__flex">
         <h1>Rollen</h1>
-        <a class="btn btn-action" href="{% url 'context_aanmaken' %}">Nieuwe rol</a>
+        <a class="btn btn-action" href="{% url 'context_aanmaken' %}">
+            <svg width="24" height="24" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
+            </svg>
+            Nieuwe rol
+        </a>
     </div>
 
     <!-- <form>
