--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -14,7 +14,7 @@
         </div>
 
         {% if object %}
-        <h1>Rol '{{object.naam}}' aanpassen</h1>
+        <h1>Wijzig rol '{{object.naam}}'</h1>
         {% else %}
         <h1>Rol aanmaken</h1>
         {% endif %}
