--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -34,17 +34,23 @@
 }
 
 .filter-header {
-    display: flex;
-    justify-content: space-between;
+    h1 {
+        margin: 0 16px 16px 0;
+    }
+
+    @media (min-width: map-get($grid-breakpoints, md)) {
+        display: flex;
+        justify-content: space-between;
+
+        h1 {
+            margin-bottom: 0;
+        }
+    }
 
     .container__flex {
         display: flex;
         align-items: baseline;
         flex: 1;
-    }
-
-    h1 {
-        margin: 0 16px 0 0;
     }
 }
 
