--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="nl">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
         <title>{% block title %}PlanR{% endblock %}</title>
         <link rel="apple-touch-icon" sizes="180x180" href="{{base_url}}{%webpack_static 'images/apple-touch-icon.png' %}"/>
         <link rel="icon" type="image/png" sizes="32x32" href="{{base_url}}{%webpack_static 'images/favicon-32x32.png' %}"/>
