--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -99,6 +99,11 @@
         &.active {
             border-width: 2px;
             border-color: $gray-tint08;
+
+            &:focus {
+                border-color: $gray-tint11;
+                outline-width: 0 !important;
+            }
         }
 
         &:after {
