Added standaard teksten for the StandaardExterneOmschrijving model. Added views, beheer and proper forms.

--- a/app/apps/context/templates/standaard/melding_afhandelen_omschrijving_extern.html
+++ b/app/apps/context/templates/standaard/melding_afhandelen_omschrijving_extern.html
@@ -1,4 +1,5 @@
 {% load rotterdam_formulier_html %}
 <div class="form-control__with-helptext js-validation">
+    {{ form.standaard_omschrijvingen|render_rotterdam_formulier }}
     {{ form.omschrijving_extern|render_rotterdam_formulier }}
 </div>
