--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -9,6 +9,7 @@
     <li><a href="{% url 'gebruiker_lijst' %}">Gebruikers</a></li>
     <li><a href="{% url 'context_lijst' %}">Rollen</a></li>
     <li><a href="{% url 'rechtengroep_lijst' %}">Rechtengroepen</a></li>
+    <li><a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaardteksten</a></li>
 </ul>
 
 
