--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -516,3 +516,10 @@ section {
         width: 100%;
     }
 }
+
+.counter {
+    display: block;
+    margin-top: -1.5em;
+    margin-left: 1em;
+    font-size: 0.75rem;
+}
