Css tweaks, textchanges

--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_lijst.html
@@ -14,11 +14,11 @@
     </div>
     <div class="container__flex">
         <h1> Standaard Externe Omschrijvingen</h1>
-        <a class="btn btn-action" href="{% url 'standaard_externe_omschrijving_aanmaken' %}">
+        <a class="btn btn-action btn-240" href="{% url 'standaard_externe_omschrijving_aanmaken' %}">
             <svg width="24" height="24" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
             </svg>
-            Nieuwe Standaard Omschrijving
+            Nieuwe Omschrijving
         </a>
     </div>
 
