--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -462,6 +462,7 @@ textarea {
         display: flex;
         flex-direction: row;
         margin-top: 1rem;
+        column-gap: 1rem;
 
         > .label,
         > label {
