--- a/app/apps/context/templates/benc/melding_afhandelen_omschrijving_extern.html
+++ b/app/apps/context/templates/benc/melding_afhandelen_omschrijving_extern.html
@@ -1,6 +1,7 @@
 {% load rotterdam_formulier_html %}
 {% if melding.meta.terugkoppeling_gewenst == "Ja" and melding.meta.email_melder %}
     <div class="form-control__with-helptext js-validation">
+        {{ form.standaard_omschrijvingen|render_rotterdam_formulier }}
         {{ form.omschrijving_extern|render_rotterdam_formulier }}
     </div>
 {% endif %}
