--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -93,7 +93,7 @@
                     {% include 'rotterdam_formulier_html/field_icon.html' %}
                 {% endif %}
                 {% if field.auto_id %}
-                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
+                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}{% if not field.field.required %} <small>(Niet verplicht)</small>{% endif %}</label>
                 {% endif %}
                 <div>
                     <select multiple name="{{ field.html_name }}" id="{{ field.auto_id }}" {% render_attrs field class="form-select" %} {% if field.field.required %}required{% endif %} >
@@ -118,7 +118,7 @@
                     {% include 'rotterdam_formulier_html/field_icon.html' %}
                 {% endif %}
                 {% if field.auto_id %}
-                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
+                    <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}{% if not field.field.required %} <small>(Niet verplicht)</small>{% endif %}</label>
                 {% endif %}
                 <div>
                     <select name="{{ field.html_name }}" id="{{ field.auto_id }}" {% render_attrs field class="form-select" %} {% if field.field.required %}required{% endif %}>
