--- a/app/apps/authorisatie/templates/auth/group_form.html
+++ b/app/apps/authorisatie/templates/auth/group_form.html
@@ -2,8 +2,8 @@
 {% load rotterdam_formulier_html %}
 
 {% block body %}
-<turbo-frame id="context_aanmaken">
-    <div class="page__beheer">
+<turbo-frame id="beheer">
+    <div class="page__beheer" data-turbo-action="advance">
         <div>
             <a href="{% url 'rechtengroep_lijst' %}" data-turbo-action='advance' class="link--back">
                 <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
