--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
@@ -22,9 +22,9 @@
                     method="post"
                     class=""
                     data-controller="externeomschrijvingformulier"
-                    data-turbo-frame="_top"
                     enctype="multipart/form-data"
                     id="externeOmschrijvingForm"
+                    novalidate
                 >
                     {% csrf_token %}
                     <fieldset>
@@ -37,7 +37,7 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button type="reset" class="btn btn-tertiary" data-controller="detail" data-action="detail#closeModal">
+                            <button type="reset" class="btn btn-tertiary">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
