--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanmaken.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanmaken.html
@@ -29,7 +29,7 @@
                     {{ form.non_field_errors }}
                     {% csrf_token %}
                     <fieldset>
-                        <div class="js-validation">
+                        <div class="form-control__with-helptext js-validation">
                             {{ form.titel|render_rotterdam_formulier }}
                         </div>
                         <div class="form-control__with-helptext js-validation">
