--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
@@ -20,7 +20,9 @@
                 {{ form.non_field_errors }}
                     {% csrf_token %}
                     <fieldset>
-                    {{ form.email|render_rotterdam_formulier }}
+                    <div class="form-control__with-helptext js-validation">
+                        {{ form.email|render_rotterdam_formulier }}
+                    </div>
                     {{ form.telefoonnummer|render_rotterdam_formulier }}
                     {{ form.first_name|render_rotterdam_formulier }}
                     {{ form.last_name|render_rotterdam_formulier }}
