--- a/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
+++ b/app/apps/main/templates/standaard_externe_omschrijving/standaard_externe_omschrijving_aanpassen.html
@@ -28,7 +28,7 @@
                 >
                     {% csrf_token %}
                     <fieldset>
-                        <div class="js-validation">
+                        <div class="form-control__with-helptext js-validation">
                             {{ form.titel|render_rotterdam_formulier }}
                         </div>
                         <div class="form-control__with-helptext js-validation">
