--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -38,6 +38,7 @@
                             class="btn btn-tertiary"
                             data-controller="detail"
                             data-action="detail#closeModal"
+                            data-detail-target="modalAfhandelen"
                         >
                             <span>Annuleren</span>
                         </button>
