--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -15,6 +15,9 @@
         <link rel="icon" href="{{base_url}}{%webpack_static 'images/favicon.ico' %}"/>
         <meta name="turbo-cache-control" content="no-cache">
         {% block stylesheets %}
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+                integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+                crossorigin=""/>
             {% render_bundle 'app' 'css' %}
         {% endblock %}
 
@@ -40,6 +43,10 @@
         {% block javascripts %}
             {% render_bundle 'app' 'js' %}
         {% endblock %}
+        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+        integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+        crossorigin="">
+        </script>
     </head>
     <body>
         <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
